--- a/CLIENT/DB CARDS/src/App.css
+++ b/CLIENT/DB CARDS/src/App.css
@@ -1,42 +1,40 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.cardHolder{
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  flex-wrap: wrap;
+  width: 80vw; /*14vw x5 card & 10 margins 1vw*/
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.card{
+  background-color: #322424;
+  border-radius: 12px;
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+  width: 14vw;
+  height: 14vw;
+  margin: 1vw;
 
-.card {
-  padding: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.read-the-docs {
-  color: #888;
+.addCard{
+  background-color: #322424;
+  color: aliceblue;
+  transition: color 0.3s, background-color 0.3s;
+}
+.addCard:hover{
+  color:#322424;
+  background-color: aliceblue;
 }
